# SecureChat

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
backend/: README.md  main.py  pyproject.toml  run.py  setup.bat  setup.sh
backend/cryptography/: asymmetric_crypto.py  message_models.py  symmetric_crypto.py
backend/services/: message_service.py  user_service.py
backend/tests/: test_decryption.py  test_encryption.py  test_message_services.py  test_module.py  test_user_service.py
frontend/: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/securechat-frontend/: package-lock.json  package.json
frontend/securechat-frontend/src/: App.js
frontend/securechat-frontend/src/Pages/: NoPage.js  Welcome.js  WelcomeBack.js
frontend/securechat-frontend/src/components/: Login.js  MessageDisplay.js  MessageList.js  SendMessage.js  SignUp.js  UserContext.js
frontend/src/: App.js  index.css
frontend/src/components/: ErrorBoundary.jsx  MessageList.js  SendMessage.js  SendMessage.jsx
frontend/src/components/ui/: Loading.jsx  accordion.jsx  button.jsx  card.jsx  input.jsx  label.jsx  textarea.jsx  toast.jsx
frontend/src/config/: api.js
frontend/src/hooks/: useMessages.js
frontend/src/services/: messageService.js
frontend/src/utils/: constants.js
